@@ -33,6 +33,10 @@
  * This widget inherits from the @ref Layout one, so that all the
  * functions acting on it also work for progress bar objects.
  *
+ * This widget emits the following signals, besides the ones sent from
+ * @ref Layout:
+ * @li @c "changed" - when the value is changed
+ *
  * This widget has the following styles:
  * - @c "default"
  * - @c "wheel" (simple style, no text, no progression, only
